--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@expo/metro-runtime": "^3.2.1",
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.0.2",
-    "expo": "~51.0.8",
+    "expo": "^51.0.8",
     "expo-constants": "~16.0.1",
     "expo-font": "~12.0.5",
     "expo-linking": "~6.3.1",
@@ -36,7 +36,8 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-vector-icons": "^10.1.0",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "expo-asset": "~10.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
